--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" media="screen" href="../src/app.css" />
+    <link rel="icon" href="../assets/paleta.png" type="image/icon type">
 </head>
 
 <body>
